# zcore

./: AUTHORS  Makefile.am  README.md  autogen.sh  configure.ac  run-clean.sh  test.sh
src/: Makefile.am  acquire.c  acquire.cpp  acquire.h  add-ethernet.sh  add.sh  apply-ethernet.cpp  apply-ethernet.sh  apply-mobile.c  apply-mobile.cpp  apply-nethernet.sh  apply-rules.sh  apply.sh  applyif.sh  builtin.c  builtin.cpp  builtin.h  command.c  command.cpp  command.h  completion.c  completion.cpp  completion.h  config.c  config.cpp  config.h  domain.h  ethernet-online.sh  ethernet.c  ethernet.sh  face.c  face.cpp  face.h  files.sh  filter.c  filter.cpp  filter.h  filter2.c  filter2.h  generator.c  (+62 more)
src/consts/: condition.json  test.json  utils.json  utils2.json
src/json/: ethernet.json  ethernet.schema.json  mobile.json  mobile.schema.json  zenith.json
src/json/firewall/: rules.json  zones.json
src/json/service/: ntp.json  vrrp.json
src/schema/: _dns.schema._json  apn-profile.schema.json  apn-profiles.schema.json  dns.schema.json  ethernet.schema.json  lan.schema.json  loopback.schema.json  mobile.schema.json  nethernet.schema.json  routes.schema.json  switch.schema.json  switchports.schema.json  wan.schema.json
src/schema/firewall/: rules.schema.json  zones.schema.json
src/schema/service/: ntp.schema.json  (+2 more)
src/script/: add-ethernet.sh  add.sh  apply-ethernet.sh  apply-mobile.sh  apply-rules.sh  apply.sh  dump.sh  ethernet-offine.sh  ethernet-online.sh  get.sh  match.sh  mobile-online.sh  mobile.sh  nethernet.sh  ntp-online.sh  ntp.sh  rules-online.sh  rules.sh  save.sh  switch.sh  switchports.sh  testmerge.sh  testmerge2.sh  zones-online.sh
src/test/: filter-coverage.sh  test.sh  test1.reference  test1.script  test1.sh  test2.reference  test2.script  test2.sh  test3.reference  test3.script  test3.sh  testconfig.json  tests.sh
(+128 files in other folders)
